--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Care Mobility</title>
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="assets/cm-favicon.png" />
+  <link rel="icon" href="assets/CM-Favicon.png" type="image/png" />
 
   <!-- Calendly embed -->
   <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
@@ -382,14 +382,14 @@
   </div>
 </section>
 
-<!-- WHO CARE MOBILITY IS FOR -->
+<!-- WHO WE SERVE -->
 <section class="section section-soft">
   <div class="container">
 
-    <h2 class="section-title-blue">Who Care Mobility Is For</h2>
+    <h2 class="section-title-blue">Who We Serve</h2>
     <p class="how-subhead">
-      Care Mobility is designed for patients and care teams who rely on consistent,
-      dependable transportation — without the administrative burden.
+      Care Mobility removes the cost, stress, and logistical burden of transportation
+      for patients, families, and care teams.
     </p>
 
     <div class="grid grid-3">
@@ -397,10 +397,10 @@
       <!-- Home-based care providers -->
       <div class="card">
         <strong>If you’re a home-based care provider</strong>
-        <ul style="padding-left: 18px;">
-          <li>Remove transportation logistics from your care team’s workload</li>
-          <li>Eliminate late or missed appointments that disrupt care plans</li>
-          <li>Keep staff focused on clinical outcomes, not ride coordination</li>
+        <ul style="padding-left: 18px; margin-top: 12px;">
+          <li>Offload transportation logistics from your care team</li>
+          <li>Reduce late or missed appointments</li>
+          <li>Keep staff focused on clinical outcomes</li>
           <li>Ensure patients arrive consistently and on time</li>
         </ul>
       </div>
@@ -408,36 +408,36 @@
       <!-- Assisted living centers -->
       <div class="card">
         <strong>If you’re an assisted living center</strong>
-        <ul style="padding-left: 18px;">
-          <li>Reduce staff time spent coordinating resident transportation</li>
-          <li>Simplify recurring medical trips for multiple residents</li>
+        <ul style="padding-left: 18px; margin-top: 12px;">
+          <li>Reduce staff time spent coordinating medical transport</li>
+          <li>Simplify recurring trips for multiple residents</li>
           <li>Manage the full loop from pickup to return</li>
-          <li>Free administrators to focus on operations and resident care</li>
+          <li>Free administrators to focus on operations and care</li>
         </ul>
       </div>
 
       <!-- Adult children -->
       <div class="card">
         <strong>If you’re a caring adult child</strong>
-        <ul style="padding-left: 18px;">
-          <li>Avoid taking time off work for recurring appointments</li>
-          <li>Eliminate the stress of rearranging your day around rides</li>
+        <ul style="padding-left: 18px; margin-top: 12px;">
+          <li>Avoid taking time off work for medical appointments</li>
+          <li>Eliminate the stress of rearranging your day</li>
           <li>Know your parent is supported door to door</li>
-          <li>Focus on being their child, not their driver</li>
+          <li>Be their child — not their driver</li>
         </ul>
       </div>
 
-      <!-- Healthcare providers -->
+      <!-- Specialized healthcare providers -->
       <div class="card">
         <strong>If you’re a specialized healthcare provider</strong>
-        <p class="text-muted" style="margin-bottom: 10px;">
+        <p class="text-muted" style="margin: 8px 0 10px;">
           Dialysis, rehab, mental health, infusion therapy
         </p>
         <ul style="padding-left: 18px;">
           <li>Reduce no-shows caused by unreliable transportation</li>
-          <li>Improve patient attendance and treatment continuity</li>
-          <li>Offload high-stress scheduling and transport coordination</li>
-          <li>Keep clinics running efficiently with predictable arrivals</li>
+          <li>Improve attendance and treatment continuity</li>
+          <li>Offload high-stress scheduling and coordination</li>
+          <li>Keep clinics running predictably and efficiently</li>
         </ul>
       </div>
 
