--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Care Mobility</title>
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="assets/CM-Favicon.png" type="image/png" />
+  <link rel="icon" href="assets/CM-Logo.png" type="image/png" />
 
   <!-- Calendly embed -->
   <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
