--- a/index.html
+++ b/index.html
@@ -441,6 +441,28 @@
         </ul>
       </div>
 
+      <!-- NEW: Hospitals & medical centers -->
+      <div class="card">
+        <strong>If you’re a hospital or medical center</strong>
+        <ul style="padding-left: 18px; margin-top: 12px;">
+          <li>Reduce missed follow-ups and discharge-related gaps</li>
+          <li>Provide a reliable option for recurring outpatient visits</li>
+          <li>Lower the burden on staff managing ride coordination</li>
+          <li>Improve continuity of care with dependable arrivals</li>
+        </ul>
+      </div>
+
+      <!-- NEW: Care coordinators & social workers -->
+      <div class="card">
+        <strong>If you’re a care coordinator or social worker</strong>
+        <ul style="padding-left: 18px; margin-top: 12px;">
+          <li>Set up transportation without complex eligibility steps</li>
+          <li>Reduce time spent rebooking rides and troubleshooting</li>
+          <li>Offer patients a consistent, dependable routine</li>
+          <li>Coordinate changes easily as care plans evolve</li>
+        </ul>
+      </div>
+
     </div>
   </div>
 </section>
