--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
 
 <header class="header">
   <div class="header-left">
-    <img
-      src="assets/CM-Logo.png"
-      alt="Care Mobility logo"
-      class="logo"
-    />
-    <div>
-      <div class="brand">Care Mobility</div>
-      <div class="tagline">Getting you there every day</div>
-    </div>
+    <a href="/" class="logo-link">
+      <img
+        src="assets/CM-Logo.png"
+        alt="Care Mobility"
+        class="logo"
+      />
+    </a>
   </div>
 
   <div class="header-right">
