--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 
       <!-- Home-based care providers -->
       <div class="card">
-        <strong>If you’re a home-based care provider</strong>
+        <strong class="persona-title">If you’re a home-based care provider</strong> 
         <ul style="padding-left: 18px; margin-top: 12px;">
           <li>Offload transportation logistics from your care team</li>
           <li>Reduce late or missed appointments</li>
@@ -405,7 +405,7 @@
 
       <!-- Assisted living centers -->
       <div class="card">
-        <strong>If you’re an assisted living center</strong>
+        <strong class="persona-title">If you’re an assisted living center</strong>
         <ul style="padding-left: 18px; margin-top: 12px;">
           <li>Reduce staff time spent coordinating medical transport</li>
           <li>Simplify recurring trips for multiple residents</li>
@@ -416,7 +416,7 @@
 
       <!-- Adult children -->
       <div class="card">
-        <strong>If you’re a caring adult child</strong>
+        <strong class="persona-title">If you’re a caring adult child</strong>
         <ul style="padding-left: 18px; margin-top: 12px;">
           <li>Avoid taking time off work for medical appointments</li>
           <li>Eliminate the stress of rearranging your day</li>
@@ -427,7 +427,7 @@
 
       <!-- Specialized healthcare providers -->
       <div class="card">
-        <strong>If you’re a specialized healthcare provider</strong>
+        <strong class="persona-title">If you’re a specialized healthcare provider</strong>
         <p class="text-muted" style="margin: 8px 0 10px;">
           Dialysis, rehab, mental health, infusion therapy
         </p>
@@ -441,7 +441,7 @@
 
       <!-- NEW: Hospitals & medical centers -->
       <div class="card">
-        <strong>If you’re a hospital or medical center</strong>
+        <strong class="persona-title">If you’re a hospital or medical center</strong>
         <ul style="padding-left: 18px; margin-top: 12px;">
           <li>Reduce missed follow-ups and discharge-related gaps</li>
           <li>Provide a reliable option for recurring outpatient visits</li>
@@ -452,7 +452,7 @@
 
       <!-- NEW: Care coordinators & social workers -->
       <div class="card">
-        <strong>If you’re a care coordinator or social worker</strong>
+        <strong class="persona-title">If you’re a care coordinator or social worker</strong>
         <ul style="padding-left: 18px; margin-top: 12px;">
           <li>Set up transportation without complex eligibility steps</li>
           <li>Reduce time spent rebooking rides and troubleshooting</li>
@@ -460,7 +460,7 @@
           <li>Coordinate changes easily as care plans evolve</li>
         </ul>
       </div>
-
+      
     </div>
   </div>
 </section>
