--- a/index.html
+++ b/index.html
@@ -278,49 +278,27 @@
 </section>
 
 <!-- INSURANCE & LICENSING -->
-<section class="alt-module trust-module">
+<section class="alt-module trust-module subtle">
   <div class="alt-container alt-split">
 
     <!-- LEFT: COPY -->
     <div class="alt-text">
-      <h2>Fully Insured & Properly Licensed</h2>
+      <h2>Operating Responsibly & In Compliance</h2>
 
       <p>
-        Care Mobility operates as a fully insured transportation service,
-        meeting all local and state requirements for non-emergency medical
-        transportation.
+        Care Mobility operates as a properly insured and licensed
+        private-pay medical transportation service in California.
       </p>
 
-      <ul class="alt-bullets">
-        <li>
-          <strong>Commercially insured</strong>
-          Our vehicles and operations are covered by commercial auto and
-          general liability insurance appropriate for patient transportation.
-        </li>
-
-        <li>
-          <strong>Licensed in Contra Costa County</strong>
-          Care Mobility is permitted to operate within Contra Costa County
-          and complies with all applicable local transportation requirements.
-        </li>
-
-        <li>
-          <strong>Authorized to operate in California</strong>
-          We operate in accordance with State of California transportation
-          and business regulations for private-pay medical transportation.
-        </li>
-
-        <li>
-          <strong>Professional drivers & compliant vehicles</strong>
-          Drivers are vetted and vehicles are maintained and equipped to
-          safely support ambulatory and wheelchair-accessible patients.
-        </li>
+      <ul class="alt-bullets compact">
+        <li>Commercial auto and general liability insurance</li>
+        <li>Authorized for private-pay medical transportation in California</li>
+        <li>Maintained, compliant vehicles and professional service standards</li>
       </ul>
 
-      <p class="trust-note">
-        You don’t need to navigate insurance approvals or eligibility rules —
-        but you can trust that Care Mobility operates responsibly, legally,
-        and with patient safety as a priority.
+      <p class="trust-oneline">
+        Drivers are background verified and vetted, with appropriate insurance
+        and licensing in place.
       </p>
     </div>
 
