--- a/index.html
+++ b/index.html
@@ -302,6 +302,14 @@
       </p>
     </div>
 
+    <!-- RIGHT: IMAGE -->
+    <div class="alt-images trust-image">
+      <img
+        src="assets/DialysisTrip.jpg"
+        alt="Care Mobility driver transporting a patient to a dialysis appointment"
+      />
+    </div>
+
   </div>
 </section>
 
