--- a/index.html
+++ b/index.html
@@ -231,6 +231,13 @@
   </div>
 </section>
 
+<!-- HOW IT WORKS IMAGE -->
+<section class="how-works-image">
+  <div class="container">
+    <img src="assets/senior-arrival-medical.jpg" alt="Senior arriving at medical facility" class="full-width-image" />
+  </div>
+</section>
+
 <!-- SIMPLER ALTERNATIVE -->
 <section class="alt-module">
   <div class="alt-container alt-split">
@@ -308,7 +315,7 @@
     <!-- RIGHT: IMAGE -->
     <div class="alt-images trust-image">
       <img
-        src="assets/senior-arrival-medical.jpg"
+        src="assets/DialysisTrip.jpg"
         alt="Care Mobility driver transporting a patient to a dialysis appointment"
       />
     </div>
