--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     <!-- RIGHT: IMAGE -->
     <div class="alt-images trust-image">
       <img
-        src="assets/DialysisTrip.jpg"
+        src="assets/pleasant-ride-conversation.jpg"
         alt="Care Mobility driver transporting a patient to a dialysis appointment"
       />
     </div>
