--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
     <!-- RIGHT: BRAND IMAGE -->
     <div class="alt-images">
       <img
-        src="assets/CareMobilityDifference.jpg"
+        src="assets/GettingYouThere.jpg"
         alt="The Care Mobility Difference – Reliable care. Real independence."
       />
     </div>
