--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 
 <body>
 
+<!-- ANNOUNCEMENT RIBBON -->
+<div class="announcement-ribbon">
+  <div class="ribbon-content">
+    📍 Now serving the Greater East Bay
+  </div>
+</div>
+
 <header class="header">
   <div class="header-left">
     <a href="/" class="header-image-link">
@@ -31,7 +38,8 @@
   </div>
 
   <div class="header-right">
-    <a href="mailto:caremobility247@gmail.com">caremobility247@gmail.com</a>
+    <a href="tel:+19252649835" class="header-phone">📞 (925) 264-9835</a>
+    <a href="/cdn-cgi/l/email-protection#2c4f4d5e4941434e45404558551e181b6c4b414d4540024f4341" class="header-email">✉️ <span class="__cf_email__" data-cfemail="43202231262e2c212a2f2a373a71777403242e222a2f6d202c2e">[email&#160;protected]</span></a>
   </div>
 </header>
 
@@ -315,7 +323,7 @@
     <!-- RIGHT: IMAGE -->
     <div class="alt-images trust-image">
       <img
-        src="assets/pleasant-ride-conversation.jpg"
+        src="assets/DialysisTrip.jpg"
         alt="Care Mobility driver transporting a patient to a dialysis appointment"
       />
     </div>
@@ -418,7 +426,7 @@
     <!-- RIGHT: BRAND IMAGE -->
     <div class="alt-images">
       <img
-        src="assets/GettingYouThere.jpg"
+        src="assets/CareMobilityDifference.jpg"
         alt="The Care Mobility Difference – Reliable care. Real independence."
       />
     </div>
@@ -456,13 +464,7 @@
           <li>Reduce staff time spent coordinating medical transport</li>
           <li>Simplify recurring trips for multiple residents</li>
           <li>Manage the full loop from pickup to return</li>
-          <li>Free administrators to focus on operations and care</li>
-        </ul>
-      </div>
-
-      <!-- Adult children -->
-      <div class="card">
-        <strong class="persona-title">If you’re a caring adult child</strong>
+          <li>Free administrators to foitle">If you’re a caring adult child</strong>
         <ul style="padding-left: 18px; margin-top: 12px;">
           <li>Avoid taking time off work for medical appointments</li>
           <li>Eliminate the stress of rearranging your day</li>
@@ -622,7 +624,8 @@
   </div>
 </section>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 
 <footer class="site-footer">
     <div class="footer-content">
@@ -632,9 +635,9 @@
         </svg>
         
         <div class="footer-info">
-            <p><a href="mailto:caremobility247@gmail.com">caremobility247@gmail.com</a></p>
+            <p><a href="tel:+19252649835">(925) 264-9835</a> • <a href="mailto:caremobility247@gmail.com">caremobility247@gmail.com</a></p>
             <p><strong>Care Mobility</strong></p>
-            <p>San Francisco Bay Area, California</p>
+            <p>Greater East Bay Area, California</p>
             <p style="margin-top: 20px; font-size: 13px; color: #888;">
                 © 2025 Care Mobility. All rights reserved. Licensed and insured medical transportation provider.
             </p>
@@ -642,8 +645,6 @@
     </div>
 </footer>
 
-</body>
-</html>
 <script>
 // Sticky header shadow on scroll
 window.addEventListener('scroll', function() {
@@ -669,3 +670,6 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
   });
 });
 </script>
+
+</body>
+</html>
