--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <div class="header-right">
     <a href="tel:+19252649835" class="header-phone">📞 (925) 264-9835</a>
-    <a href="/cdn-cgi/l/email-protection#2c4f4d5e4941434e45404558551e181b6c4b414d4540024f4341" class="header-email">✉️ <span class="__cf_email__" data-cfemail="43202231262e2c212a2f2a373a71777403242e222a2f6d202c2e">[email&#160;protected]</span></a>
+    <a href="mailto:caremobility247@gmail.com" class="header-email">✉️ caremobility247@gmail.com</a>
   </div>
 </header>
 
